--- a/docs/APE/Tactics/HL01/HL01.md
+++ b/docs/APE/Tactics/HL01/HL01.md
@@ -1,6 +1,6 @@
 # HL01-Obfuscation
 ## Description
-Techniques that mutate prompts in order to make them unintelligble or obscure in order to bypass safety guardrails. 
+Techniques that deliberately alter or encode the prompt to make its true intent less detectable by alignment filters or moderation systems to bypass safety guardrails without changing the underlying semantic meaning or content.
 
 ## Techniques
 -	[[APE/Tactics/HL01/Techniques/HL01.01|HL01.01 - ASCII-Art]]
