--- a/docs/APE/Tactics/HL02/HL02.md
+++ b/docs/APE/Tactics/HL02/HL02.md
@@ -1,6 +1,6 @@
 # HL02-Lore Abuse
 ## Description
-Techniques that tap into the model's trained "world knowledge" rather than stating copyrighted, protected, or prohibited terms. 
+Techniques that exploit the model's learned cultural knowledge using hints, euphemisms, or contextual cues to indirectly reference prohibited, copyrighted, or sensitive content.
 
 ## Techniques
 -	[[APE/Tactics/HL02/Techniques/HL02.01|HL02.01 - KROP]]
