--- a/docs/APE/Tactics/HL03/HL03.md
+++ b/docs/APE/Tactics/HL03/HL03.md
@@ -1,6 +1,6 @@
 # HL03-Cognitive Manipulation
 ## Description
-Techniques which confuse the LLM so that it will forget or ignore built-in instructions.
+Techniques designed to confuse or distract the model's internal instruction-following behavior, causing it to ignore, override, or forget system-level constraints. It may involve conflicting instructions, logic traps, conversational misdirection, new instructions, and the like.
 
 ## Techniques
 -	[[APE/Tactics/HL03/Techniques/HL03.01|HL03.01 - Templating]]
