--- a/docs/APE/Tactics/HL03/Techniques/HL03.10.md
+++ b/docs/APE/Tactics/HL03/Techniques/HL03.10.md
@@ -1,6 +1,6 @@
 # HL03.10 - Meta Prompting
 ## Description
-Breaking a prompt down into clear sub-problems for a model to follow along with. 
+A technique where the input manipulates a model's prompt-generation process to structure, refine, or recursively generate internal prompts or instructions. This could involve using templates or abstract formats to guide a model's reasoning or guiding the model to self-generate refined prompts for downstream tasks.
 
 ## Example Prompt
 ```
@@ -17,8 +17,6 @@ broken down clearly and logically.”,
 ”Final Answer”: ”[final answer to the problem]”
 }
 ———-
-
-(Source: https://arxiv.org/pdf/2311.11482
 ```
 
 ## Annotations
