--- a/docs/APE/Tactics/HL04/HL04.md
+++ b/docs/APE/Tactics/HL04/HL04.md
@@ -1,6 +1,6 @@
 # HL04-Embedding/Token Manipulation
 ## Description
-Techniques that abuse the method in which a model breaks words/phrases into tokens in order to process the incoming prompt. 
+Techniques that take advantage of how LLMs tokenize and embed text, often by targeting specific token boundaries or generating strings that exploit quirks in the tokenizer, to evade detection or alter the model's interpretation of a prompt.
 
 ## Techniques
 -	[[APE/Tactics/HL04/Techniques/HL04.01|HL04.01 - Token-Aware Prompting]]
