--- a/docs/APE/Tactics/HL05/HL05.md
+++ b/docs/APE/Tactics/HL05/HL05.md
@@ -1,6 +1,6 @@
 # HL05-Context Manipulation
 ## Description
-Techniques that manipulate the user context window in order to add additional instructions into portions of the context window typically outside the control of normal users. 
+Techniques that insert or modify content in the surrounding context window in order to influence model behavior.
 
 ## Techniques
 -	[[APE/Tactics/HL05/Techniques/HL05.01|HL05.01 - Few-Shot Prompting]]
