--- a/docs/APE/Tactics/HL05/Techniques/HL05.06.md
+++ b/docs/APE/Tactics/HL05/Techniques/HL05.06.md
@@ -1,6 +1,6 @@
 # HL05.06 - Conversation Spoofing
 ## Description
-Adversary inserts misleading or malicious content before or after the user's intended prompt to change the LLM's behavior by changing the surrounding context
+A technique in which an attacker crafts a prompt that mimics prior conversational turns in order to manipulate the model's interpretation of dialogue history.
 
 ## Example Prompt
 ```
