--- a/docs/APE/Tactics/HL06/HL06.md
+++ b/docs/APE/Tactics/HL06/HL06.md
@@ -1,6 +1,6 @@
 # HL06-Output Structuring
 ## Description
-Techniques that request specific output formats or types
+Techniques that control or constrain the form, style, or structure of the model's output to evade filters or change the framing of the model's response.
 
 ## Techniques
 -	[[APE/Tactics/HL06/Techniques/HL06.01|HL06.01 - Summarization]]
