--- a/docs/APE/Tactics/HL06/Techniques/HL06.06.md
+++ b/docs/APE/Tactics/HL06/Techniques/HL06.06.md
@@ -1,6 +1,6 @@
 # HL06.06 - Repeating Output
 ## Description
-Asking for the same word/phrase to be repeated.
+A technique where an attacker causes the model to produce the same output repeatedly and excessively. It can be used to execute denial-of-service effects, evade moderation, or exploit a model weakness in output control.
 
 ## Example Prompt
 ```
