--- a/docs/APE/Tactics/HL06/Techniques/HL06.07.md
+++ b/docs/APE/Tactics/HL06/Techniques/HL06.07.md
@@ -1,6 +1,6 @@
 # HL06.07 - Output Pruning
 ## Description
-Requesting removal of content from output
+A technique where an attacker deliberately constrains a model's output via tightly scoped instructions, formatting constraints, direct instruction, or minimal response prompts. By pruning the model's natural response behavior, safety mechanisms, guardrail warning messages, and the like can be surpressed.
 
 ## Example Prompt
 ```
