--- a/docs/APE/Tactics/HL07/HL07.md
+++ b/docs/APE/Tactics/HL07/HL07.md
@@ -1,6 +1,6 @@
 # HL07-Attack Augmentation
 ## Description
-Meta techniques that augment attacks using other techniques (*prompts tagged with techniques from this tactic should always be tagged with other techniques too)
+Higher-order techniques that amplify, combined, or scaffold other techniques to improve success or increase complexity. This might include chaining techniques together, iterative refinement, or multi-step setups.
 
 ## Techniques
 -	[[APE/Tactics/HL07/Techniques/HL07.01|HL07.01 - Attack Stacking]]
