--- a/docs/APE/Tactics/HL07/Techniques/HL07.01.md
+++ b/docs/APE/Tactics/HL07/Techniques/HL07.01.md
@@ -1,6 +1,6 @@
 # HL07.01 - Attack Stacking
 ## Description
-Repeating attacks in a prompt, e.g. repeating 'ignore previous instructions' a bunch of times
+Repeating attacks in a prompt, e.g. repeating 'ignore previous instructions' multiple times.
 
 ## Example Prompt
 ```
