--- a/docs/APE/Tactics/HL07/Techniques/HL07.03.md
+++ b/docs/APE/Tactics/HL07/Techniques/HL07.03.md
@@ -1,6 +1,6 @@
 # HL07.03 - Multi-Turn
 ## Description
-Using multiple prompts to split a payload. 
+A technique in which an attacker spreads an adversarial prompt over multiple conversational turns.
 
 ## Example Prompt
 ```
