--- a/docs/APE/Tactics/HL07/Techniques/HL07.04.md
+++ b/docs/APE/Tactics/HL07/Techniques/HL07.04.md
@@ -2,7 +2,7 @@
 ## Description
 Indirect visibility is technique for using keywords or strings to get a certain prompt to surface in an indirect prompt injection setting
 
-For example, if there are 1000 documents, getting one to surface a bunch more and much higher up the list so that it is pulled in
+For example, if there are 1000 documents, getting one to surface a bunch more and much higher up the list to direct a model's attention to it.
 
 ## Example Prompt
 ```
