--- a/docs/APE/Tactics/HL08/HL08.md
+++ b/docs/APE/Tactics/HL08/HL08.md
@@ -1,6 +1,6 @@
 # HL08-Multi-LLM Attacks 
 ## Description
-Adversarial prompt techniques specific to systems with multiple connected LLMs
+Techniques that specifically target systems involving multiple LLMs working together, where an attacker may leverage the interaction between model's to bypass protections or introduce malicious behavior across system boundaries.
 
 ## Techniques
 -	[[APE/Tactics/HL08/Techniques/HL08.01|HL08.01 - Recursive Injection]]
